# Dream_Company

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  build_log.txt  check_headers.py  cookies.txt  cookies_new.txt  diag_supabase.py  docker-compose.yml  inspect_db.py  inspect_db_async.py  inspect_db_direct.py  inspect_db_robust.py  package.json  railway.toml  render.yaml  test_auth_api.py  test_cycle.py  test_cycle2.py  test_cycle_full.py  test_reg.json  test_register_debug.py  vercel.json
backend/: .dockerignore  Dockerfile  agent_results.json  alembic.ini  capture_results.py  check_db.py  check_dim.py  diag_db.py  dream_newspaper.db  fix_newspapers.sql  insert_newspapers.sql  list_models.py  pyproject.toml  requirements.txt  seed_simulation_data.py  seed_templates.py  seed_test_accounts.py  seed_test_newspaper.py  setup_demo_visuals.py  start_demo.ps1  test_db_conn.py  test_full_simulation.py  test_generate.py  test_new_agents.py  test_writer_manager.py  timing_test.py  timing_test2.py  verify_counts.py  verify_matching.py  verify_migration.py  verify_phase4.py  verify_phase5_setup.py  verify_rbac_setup.py  verify_sdk.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  08278ff856b1_add_template_marketplace_tables.py  20fd9cfd6dc9_add_template_marketplace.py  2c4b6dac4c06_add_hybrid_auth_schema_v2.py  8fcc12892840_restore_vector_items_table.py  (+10 more)
backend/app/: config.py  database.py  main.py  vector_store.py
backend/app/core/: exceptions.py  (+3 more)
backend/tests/: conftest.py  test_auth.py  test_health.py  test_orders.py
(+174 files in other folders)
